# moodle-session-ext

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.prod.yml  config.yml  docker-compose.yml
.github/workflows/: backend.yaml
deployment/: deployment.yaml  ingress.yaml  persistentvolumeclaim.yaml  service.yaml
src/: config.rs  db.rs  main.rs  model.rs  moodle.rs  server.rs  updater.rs
webextension/: .directory  .gitignore  .terserrc  README.md  package.json
webextension/source/: background.js  content.js  options-storage.js  options.css  options.html  server.js
webextension/source/mv2/: manifest.json
webextension/source/mv3/: manifest.json
