[package]
name = "moodle-session-ext"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.11"
reqwest-middleware = "0.1.6"
reqwest-tracing = "0.3.0"
task-local-extensions = "0.1.1"
governor = "0.4.2"
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }

kv = { path = "../rust-kv", features = ["bincode-value", "json-value"] }
serde = "1.0.143"
serde_millis = "0.1.1"
bincode = "1.3.3"

regex = "1.6.0"
once_cell = "1.13.1"
urlencoding = "2.1.0"
html-escape = "0.2.11"
email_address = "0.2.3"
serde_json = "1.0.83"

tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
anyhow = "1.0.62"
camino = "1.1.1"