[package]
name = "moodle-session-ext"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["rustls"], default-features = false }
reqwest-middleware = "0.1.6"
task-local-extensions = "0.1.1"
governor = "0.5.0"
actix-web = "4.1.0"
actix-cors = "0.6.2"
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }

kv = { git = "https://github.com/DCNick3/rust-kv", features = ["bincode-value"], rev = "479152c4d6fb9d4f4a9738c08b1feeab8c07a29a" }
serde = "1.0.143"
serde_millis = "0.1.1"
humantime-serde = "1.1.1"
bincode = "1.3.3"
serde_json = "1.0.83"
serde_yaml = "0.9.9"

regex = "1.6.0"
once_cell = "1.13.1"
urlencoding = "2.1.0"
html-escape = "0.2.11"
email_address = "0.2.3"

tracing = "0.1.36"
reqwest-tracing = "0.3.0"
tracing-actix-web = { version = "0.6.0", features = ["opentelemetry_0_18"] }
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
tracing-opentelemetry = "0.18.0"
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.11.0" }

anyhow = "1.0.62"
camino = "1.1.1"

[profile.ship]
inherits = "release"
debug = 0
lto = 'thin'